--- a/client/closet-app/public/index.html
+++ b/client/closet-app/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">    <meta
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sanchez&family=Varela+Round&display=swap" rel="stylesheet">
+    <meta
       name="description"
       content="Web site created using create-react-app"
     />
